         (thanks, Lucuan Langa) (Fred).
20081206 Makefile.am,configure.in: distribute importer/trigger.h, fix
         compilation when audiofile isn't present (Fred, sigh).
20081210 ChangeLog,configure.in,hacking/cvs-tags,man/{audio2tape.1,createhdf.1,
	 fuse-utils.1,listbasic.1,profile2map.1,raw2hdf.1,rzxcheck.1,rzxdump.1,
	 rzxtool.1,scl2trd.1,snap2tzx.1,snapconv.1,tape2wav.1,tapeconv.1,
	 tzxlist.1},README: update for 0.10.0.1 release.
20090203 man/audio2tape.1: correct documentation of default trigger (Fred).
20090411 tape2wav.c: use the new tape flag for end of tape (part of fixes for
         bug #2743838) (Fred).
20090803 Makefile.am,compat.h,compat/amiga/{Makefile.am,osname.c},
         compat/unix/{Makefile.am,osname.c},configure.in,snap2tzx.c,utils.c:
         add OS compatibility stubs ala Fuse (patch #2315512) (Chris Young &
         Fred).
20090803 compat/amiga/basename.c,compat/unix/basename.c: missed a couple of
         files (Fred).
20091022 importer/soundfile.cc: we expect mono sound files, tell audiofile to
         make the required adjustments (fixes bug #2883135; thanks, Gilberto
         Almeida) (Fred).
20091212 importer/romloader.cc: guard against array underrun on empty block
         (Fred).
20100722 converter/romloader.cc: fix header printing (Fred).
20100722 tzxlist.c: add ROM block header printing (Fred).
20100806 Makefile.am,acinclude.m4,config.rpath,configure.in,man/tzxlist.1,
         tzxlist.c: support the de-facto standard Windows-1252 charset in TZX
         text (Fred).
20101003 snapconv.c,man/snapconv.1: add -f flag to write snapshots with A and F
         and A' and F' transposed to fix SZX snaps written with old versions of
         libspectrum (Fred).
20101003 man/snapconv.1: libspectrum now automatically fixes the problem of
         A and F being transposed.
20101007 raw2hdf.c: add missing default for version (fixes bug #3082566; thanks,
         UB880D) (Fred).
20101129 ChangeLog,README,man/*.1: updates for 1.0.