@@ -313,3 +313,5 @@
 20101007 raw2hdf.c: add missing default for version (fixes bug #3082566; thanks,
          UB880D) (Fred).
 20101129 ChangeLog,README,man/*.1: updates for 1.0.
+20101206 Makefile.am: remember to put all compat directories in the dist tarball
+         (thanks, kizmiaz).
